[package]
name = "rsa_ringsign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5.0"
rand = "0.8.4"
hex = "0.4.0"
sha2 ="0.9.8"
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.4"
sp-core = "3.0.0"
rust-utils = "0.2.3"
block-padding = "0.2.1"
byteorder = "1.2.7"